kubernetes/app/service.yaml
apiVersion: v1

kind: Service

metadata:

    name: game-of-life-service

spec:

    selector:
      app: game-of-life
    type: NodePort
    ports:
      - name: http
        port: 80
        targetPort: 5000
