kubernetes/app/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: game-of-life-ingress

  annotations:

        kubernetes.io/ingress.class: nginx

        nginx.ingress.kubernetes.io/affinity: "cookie"

        nginx.ingress.kubernetes.io/session-cookie-name: "sticky"

        nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"

        nginx.ingress.kubernetes.io/session-cookie-expires: "172800"

spec:


  rules:

    - http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: game-of-life-service

                port:

                  number: 5000
